[Filesystem] Assertion on $0.webkitEntries while on the input field. https://bugs.webkit.org/show_bug.cgi?id=91954

Reviewed by Kent Tamura.

Accessing .webkitEntries should not crash when input type is not for file.

Source/WebCore:

Tests: fast/filesystem/input-access-entries.html

* Modules/filesystem/HTMLInputElementFileSystem.cpp:
(WebCore::HTMLInputElementFileSystem::webkitEntries):

LayoutTests:

* fast/filesystem/input-access-entries.html: Added.
* fast/filesystem/input-access-entries-expected.txt: Added.


Canonical link: https://commits.webkit.org/110684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124309 268f45cc-cd09-0410-ab3c-d52691b4dbfc